<resources>
    <string name="app_name">CookieQuiz</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Log In</string>
    <string name="prompt_logout">Log Out</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_registerNow">Or Register Now</string>
    <string name="prompt_loginNow">Or Log In Now</string>
    <string name="prompt_no_cookie">300</string>
    <string name="prompt_single_player">Single Player</string>
    <string name="prompt_start">Start</string>
    <string name="cookie">Cookie</string>
    <string name="logo">Logo</string>
    <string name="options">Options</string>
    <string name="prompt_question">Question 1</string>
    <string name="actual_question">1</string>
    <string name="question_no">10</string>
</resources>