<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/actLogin_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/actLogin_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/actLogin_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/inputs"
        android:hint="@string/prompt_email"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/prompt_email" />

    <EditText
        android:id="@+id/actLogin_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/actLogin_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputs"
        android:hint="@string/prompt_password"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/prompt_password" />

    <Button
        android:id="@+id/actLogin_loginBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/actLogin_password"
        android:text="@string/prompt_login"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/actLogin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actLogin_loginBtn"
        android:text="@string/prompt_registerNow"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_yellow"
        android:layout_marginTop="20dp"
        android:textSize="15sp"/>

</RelativeLayout>